# k-means-clustering

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  csvToSet.h  main.cpp  setGen.h
